--- a/fixture/assert.yml
+++ b/fixture/assert.yml
@@ -1,56 +1,66 @@
-- name: Attributes assertion
+- name: Text Assertion
   actions:
   - command: visit
     url: assert.html
+  
+  - assert: text_equal
+    element: .foo 
+    expect: foo
+  
+  - assert: text_contain
+    element: .foo 
+    expect: f
 
+- name: Attributes assertion
+  actions:
   - assert: attribute_equal
     element: div
     name: data-foo
-    expected: "bar"
+    expect: "bar"
 
   - assert: attribute_contain
     element: div
     name: data-bar
-    expected: "c"
+    expect: "c"
 
   - assert: attribute_equal
     element: div
     name: data-baz
-    expected: ""
+    expect: ""
 
   - assert: attribute_present
     element: div
     name: class
-    expected: foo
+    expect: foo
 
   - assert: attribute_present
     element: div
     name: class
-    expected: baz
+    expect: baz
 
   # fail
   - assert: attribute_present
     element: div
     name: class
-    expected: hoge
+    expect: hoge
 
 - name: CSS property assertion
   actions:
   - assert: css_property_equal
     element: div
     property: color
-    expected: rgba(255, 0, 0, 1)
+    expect: rgba(255, 0, 0, 1)
 
   - assert: css_property_equal
     element: div
     property: font-size
-    expected: 14px
+    expect: 14px
 
 - name: Element assertion
   actions:
   - assert: element_length_equal
     element: ul > li
-    expected: 3
+    expect: 3
 
   - assert: element_exist
     element: .foo
@@ -88,10 +98,10 @@
     url: http://example.com/
 
   - assert: url_equal
-    expected: http://example.com/
+    expect: http://example.com/
 
   - command: visit
     url: assert.html
 
   - assert: url_contain
-    expected: assert.html
+    expect: assert.html
