--- a/example/scenarios/exec_script.yml
+++ b/example/scenarios/exec_script.yml
@@ -1,13 +1,13 @@
 - name: Execute script
   actions:
   - command: visit
-    url: exec_script.html
+    url: assets/exec_script.html
 
   - command: exec_script
     script: console.log('hoge')
 
   - command: exec_script
-    src: sinon-1.10.3.js
+    src: assets/sinon-1.10.3.js
 
   - command: exec_script
     script: "sinon.stub(obj, 'method', function() { $('.foo').text('baz'); })"
