--- a/example/scenarios/assert.yml
+++ b/example/scenarios/assert.yml
@@ -1,4 +1,5 @@
 - name: Text Assertion
+  tags: [assert]
   actions:
   - command: visit
     url: assets/assert.html
@@ -12,6 +13,7 @@
     expect: f
 
 - name: Attributes assertion
+  tags: [assert]
   actions:
   - assert: attribute_equal
     element: div
@@ -45,6 +47,7 @@
     expect: hoge
 
 - name: CSS property assertion
+  tags: [assert]
   actions:
   - assert: css_property_equal
     element: div
@@ -57,6 +60,7 @@
     expect: 14px
 
 - name: Element assertion
+  tags: [assert]
   actions:
   - assert: element_length_equal
     element: ul > li
@@ -93,6 +97,7 @@
     element: .show
 
 - name: URL Assertion
+  tags: [assert]
   actions:
   - command: visit
     url: http://example.com/
