--- a/example/assert.yml
+++ b/example/assert.yml
@@ -57,20 +57,15 @@ scenarios:
       equal: 3
 
   - assert_exist: .foo
-
-  - assert_exist:
-      element: .notExist
-      expected: false
+  - assert_not_exist: .notExist
 
   - assert_visible: .show
-  - assert_visible:
-      element: .hide
-      expected: false
+  - assert_hidden: .hide
 
   - click: .toggleShow
 
   - assert_visible: .hide
-  - assert_visible: { element: .show, expected: false }
+  - assert_hidden: .show
 
 - name: URL Assertion
   actions:
