--- a/example/form.yml
+++ b/example/form.yml
@@ -13,22 +13,14 @@ scenarios:
 
 - name: assert form elements
   actions:
+  - assert_not_selected: '[name="s"] option[value="s1"]'
   - assert_selected: '[name="s"] option[value="s2"]'
+  - assert_not_selected: '[name="s"] option[value="s3"]'
+
+  - assert_not_selected: '[name="r"][value="r1"]'
   - assert_selected: '[name="r"][value="r2"]'
+  - assert_not_selected: '[name="r"][value="r3"]'
+
   - assert_selected: '[name="c"][value="c2"]'
   - assert_selected: '[name="c"][value="c3"]'
-  - assert_selected:
-      element: '[name="s"] option[value="s1"]'
-      expected: false
-  - assert_selected:
-      element: '[name="s"] option[value="s3"]'
-      expected: false
-  - assert_selected:
-      element: '[name="r"][value="r1"]'
-      expected: false
-  - assert_selected:
-      element: '[name="r"][value="r3"]'
-      expected: false
-  - assert_selected:
-      element: '[name="c"][value="c1"]'
-      expected: false
+  - assert_not_selected: '[name="c"][value="c1"]'
